--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,7 +2,9 @@
     <h3 class="text-light">GifsApp</h3>
     <hr class="text-white">
     <div class="list-group list-reset">
-        <button *ngFor="let tag of tags" class="list-group-item list-group-item-action">
+        <button *ngFor="let tag of tags"
+        (click)="searchTag(tag)"
+        class="list-group-item list-group-item-action pointer">
             {{tag | titlecase}}
         </button>
     </div>
